--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -36,7 +36,7 @@
     color: var(--primary-text-color);
     background-color: var(--accent-color);
 }
-.button__primary {
+.hero__button {
     color: var(--background-color);
     background-color: var(--accent-color);
     padding: 10px 32px;
