--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -1,12 +1,12 @@
 /* Features */
-.section-features{
+.features{
     padding-top: 94px;
 }
-.feature__list {
+.features__list {
    @extend %flex-wrap;
 }
 
-.feature__item {
+.features__item {
     flex-basis: calc((100% - 90px) / 4);
     &:nth-child(4) {
         margin-right: 0px;
@@ -19,7 +19,7 @@
     line-height: 1.14;
     margin-bottom: 10px;
 }
-.feature__img {
+.features__img {
     @extend %flex-center;
     width: 270px;
     height: 120px;
@@ -28,13 +28,13 @@
     border-radius: 4px;
     margin-bottom: 30px;
 }
-.text {
+.features__text {
     color: var(--secondary-text-color);
     font-weight: 400;
     font-size: 14px;
     line-height: 1.7;
 }
-.title {
+.features__title {
     color: var(--black-color);
     font-size: 14px;
     font-weight: 700;
