--- a/css/main.css
+++ b/css/main.css
@@ -342,19 +342,19 @@ img {
 /* Вторинний колір фону #F5F5F5 */
 /* Третій колір фону #F5F4FA */
 /* Сірий колір rgba(255, 255, 255, 0.6) */
-.client, .team__list, .work, .features__list {
+.client, .team-list, .work, .features-list {
   display: flex;
   flex-wrap: wrap;
   gap: 30px;
 }
 
-.join__svg, .client__link, .wrap__text, .features__img, .modal .modal__button {
+.join__svg, .client__link, .wrap__text, .features-list__img, .modal .modal__button {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.join__svg, .address__cont, .client__link, .portfolio__text, .portfolio__item, .button__type, .team__link, .check__input, .modal .modal__button, .modal, .container-nav__logo {
+.join__svg, .address__cont, .client__link, .portfolio__text, .portfolio__item, .button__type, .team-list__link, .check__input, .modal .modal__button, .modal, .container-nav__logo {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -449,13 +449,6 @@ body {
   background-color: var(--accent-color);
   bottom: 0px;
   left: 0px;
-  transition-property: color;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-.navigation__link--current::after-link--current {
-  color: var(--accent-color);
-  text-decoration: none;
 }
 
 .contacts {
@@ -692,10 +685,10 @@ body {
   padding-top: 94px;
 }
 
-.features__item {
+.features-list__item {
   flex-basis: calc((100% - 90px) / 4);
 }
-.features__item:nth-child(4) {
+.features-list__item:nth-child(4) {
   margin-right: 0px;
 }
 
@@ -707,7 +700,7 @@ body {
   margin-bottom: 10px;
 }
 
-.features__img {
+.features-list__img {
   width: 270px;
   height: 120px;
   border-radius: 50%;
@@ -716,14 +709,14 @@ body {
   margin-bottom: 30px;
 }
 
-.features__text {
+.features-list__text {
   color: var(--secondary-text-color);
   font-weight: 400;
   font-size: 14px;
   line-height: 1.7;
 }
 
-.features__title {
+.features-list__title {
   color: var(--black-color);
   font-size: 14px;
   font-weight: 700;
@@ -766,12 +759,12 @@ body {
   padding-top: 94px;
 }
 
-.team__item {
+.team-list__item {
   flex-basis: calc((100% - 90px) / 4);
   background-color: 0px 4px 4px hex;
 }
 
-.team__section {
+.team-list__section {
   padding-top: 30px;
   padding-bottom: 30px;
   background-color: #ffffff;
@@ -780,7 +773,7 @@ body {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-.team__title {
+.team-list__title {
   color: var(--title-text-color);
   font-weight: 500;
   font-size: 16px;
@@ -789,7 +782,7 @@ body {
   margin-bottom: 10px;
 }
 
-.team__text {
+.team-list__text {
   color: var(--secondary-text-color);
   font-weight: 500;
   font-size: 16px;
@@ -798,7 +791,7 @@ body {
   margin-bottom: 16px;
 }
 
-.team__icon {
+.team-list__icon {
   display: flex;
   flex-wrap: wrap;
   align-items: baseline;
@@ -807,11 +800,11 @@ body {
   margin-left: 32px;
 }
 
-.team__img {
+.team-list__img {
   flex-basis: calc((100% - 30px) / 4);
 }
 
-.team__link {
+.team-list__link {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -821,13 +814,13 @@ body {
   border-radius: 50%;
   transition-property: color, background-color, border-radius;
 }
-.team__link:hover, .team__link:focus {
+.team-list__link:hover, .team-list__link:focus {
   color: var(--primary-text-color);
   background-color: #2196f3;
   border-radius: 50%;
 }
 
-.team__svg {
+.team-list__svg {
   fill: currentColor;
 }
 
