--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -2,11 +2,11 @@
 .features{
     padding-top: 94px;
 }
-.features__list {
+.features-list {
    @extend %flex-wrap;
 }
 
-.features__item {
+.features-list__item {
     flex-basis: calc((100% - 90px) / 4);
     &:nth-child(4) {
         margin-right: 0px;
@@ -19,7 +19,7 @@
     line-height: 1.14;
     margin-bottom: 10px;
 }
-.features__img {
+.features-list__img {
     @extend %flex-center;
     width: 270px;
     height: 120px;
@@ -28,13 +28,13 @@
     border-radius: 4px;
     margin-bottom: 30px;
 }
-.features__text {
+.features-list__text {
     color: var(--secondary-text-color);
     font-weight: 400;
     font-size: 14px;
     line-height: 1.7;
 }
-.features__title {
+.features-list__title {
     color: var(--black-color);
     font-size: 14px;
     font-weight: 700;
