--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -5,14 +5,14 @@
     padding-bottom: 94px;
     padding-top: 94px;
 }
-.team__list {
+.team-list {
     @extend %flex-wrap;
 }
-.team__item {
+.team-list__item {
     flex-basis: calc((100% - 90px) / 4);
     background-color: 0px 4px 4px hex;
 }
-.team__section {
+.team-list__section {
     padding-top: 30px;
     padding-bottom: 30px;
     background-color: #ffffff;
@@ -20,7 +20,7 @@
     border-bottom-right-radius: 4%;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
-.team__title {
+.team-list__title {
     color: var(--title-text-color);
     font-weight: 500;
     font-size: 16px;
@@ -28,7 +28,7 @@
     text-align: center;
     margin-bottom: 10px;
 }
-.team__text {
+.team-list__text {
     color: var(--secondary-text-color);
     font-weight: 500;
     font-size: 16px;
@@ -36,7 +36,7 @@
     text-align: center;
     margin-bottom: 16px;
 }
-.team__icon {
+.team-list__icon {
     display: flex;
     flex-wrap: wrap;
     align-items: baseline;
@@ -44,10 +44,10 @@
     margin-right: 32px;
     margin-left: 32px;
 }
-.team__img {
+.team-list__img {
     flex-basis: calc((100% - 30px) / 4);
 }
-.team__link {
+.team-list__link {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -65,6 +65,6 @@
         }
 
 }
-.team__svg{
+.team-list__svg{
     fill: currentColor;
 }    
