--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -66,25 +66,39 @@
     color: var(--accent-color);
     }
 }
-
-.navigation__link--current::after {
-    content: "";
-    display: block;
-    position: absolute;
-    width: 100%;
-    height: 4px;
-    border-radius: 4px;
-    background-color: var(--accent-color);
-    bottom: 0px;
-    left: 0px;
-    // transition-property: color;
-    // transition-duration: 250ms;
-    // transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    // &-link--current {
-    //     color: var(--accent-color);
-    //         text-decoration: none;
-    // }
+.navigation__link--current {
+    color: var(--accent-color);
+    &::after {
+                content: "";
+                display: block;
+                position: absolute;
+                width: 100%;
+                height: 4px;
+                border-radius: 4px;
+                background-color: var(--accent-color);
+                bottom: 0px;
+                left: 0px;
+    }
 }
+
+// .navigation__link--current::after {
+//     content: "";
+//     display: block;
+//     position: absolute;
+//     width: 100%;
+//     height: 4px;
+//     border-radius: 4px;
+//     background-color: var(--accent-color);
+//     bottom: 0px;
+//     left: 0px;
+//     // transition-property: color;
+//     // transition-duration: 250ms;
+//     // transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+//     // &-link--current {
+//     //     color: var(--accent-color);
+//     //         text-decoration: none;
+//     // }
+// }
 .contacts {
     display: flex;
     margin-left: auto;
