--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -1,40 +1,103 @@
 /* Features */
 .features{
-    padding-top: 94px;
+    padding-top: 60px;
+    // padding-bottom: 60px;
+    @media screen and (min-width: 1199px) {
+        padding-top: 94px;
+         }
 }
 .features-list {
-   @extend %flex-wrap;
+   
+    @media screen and (min-width: 767px) {
+        // @extend %flex-wrap;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 30px;
+    }
+    
+    // @media  screen and (min-width: 1199px) {
+    //         display: flex;
+    //         align-items: center;
+    //         justify-content: center;
+    //         gap: 30px;
+    // }
 }
 
+
 .features-list__item {
-    flex-basis: calc((100% - 90px) / 4);
-    &:nth-child(4) {
-        margin-right: 0px;
+    @media screen and (min-width: 767px) {
+        flex-basis: calc((100% - 60px) / 2);
+        &:nth-child(2) {
+                margin-right: 0px;
+            }
+    }
+
+    @media screen and (min-width: 1199px) {
+        flex-basis: calc((100% - 90px) / 4);
+            &:nth-child(4) {
+                margin-right: 0px;
+            }
+    }
+    // flex-basis: calc((100% - 90px) / 4);
+    // &:nth-child(4) {
+    //     margin-right: 0px;
+    // }
+}
+.features-list__item:not(:last-child) {
+    @media screen and (max-width: 767px) {
+        margin-bottom: 30px;
     }
 }
-.title {
-    color: var(--black-color);
-    font-size: 14px;
-    font-weight: 700;
-    line-height: 1.14;
-    margin-bottom: 10px;
-}
+// .title {
+//     // color: var(--black-color);
+//     // font-size: 14px;
+//     // font-weight: 700;
+//     // line-height: 1.14;
+//     // margin-bottom: 10px;
+// }
 .features-list__img {
-    @extend %flex-center;
-    width: 270px;
-    height: 120px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border-radius: 50%;
     background-color: var(--background-color);
     border-radius: 4px;
     margin-bottom: 30px;
+    @media screen and (max-width: 480px){
+        height: 100px ;
+    }
+    @media screen and (min-width: 480px) {
+        width: 450px;
+        height: 120px;
+    }
+         @media screen and (min-width: 768px) {
+             width: 354px;
+             height: 120px;
+         }
+                  @media screen and (min-width: 1199px) {
+                      width: 270px;
+                      height: 120px;
+                  }
+    // width: 270px;
+    // height: 120px;
+    // border-radius: 50%;
+    // background-color: var(--background-color);
+    // border-radius: 4px;
+    margin-bottom: 30px;
 }
 .features-list__text {
-    color: var(--secondary-text-color);
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 1.7;
+     color: var(--secondary-text-color);
+     font-weight: 400;
+     font-size: 14px;
+     line-height: 1.7;
 }
 .features-list__title {
+    @media screen and (max-width: 767px){
+      display: flex;
+      justify-content: center; 
+      align-items: center; 
+    }
     color: var(--black-color);
     font-size: 14px;
     font-weight: 700;
