--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -6,12 +6,6 @@
 .container-nav {
     @extend %flex-align
 }
-.container {
-    max-width: 1200px;
-    padding: 0 15px;
-    margin-left: auto;
-    margin-right: auto;
-}
 /* Logo */
 .container-nav__logo {
     padding-top: 25px;
@@ -20,14 +14,19 @@
     font-family: Raleway;
     color: var(--black-color);
     font-family: Raleway;
-    font-size: 26px;
+    font-size: 24px;
     font-weight: 700;
-    line-height: 1.19;
+    line-height: 1.16;
     text-decoration: none;
     transition-property: color;
     @extend %trans-dur-time;
     &:hover {
     color: var(--accent-color);
+    }
+    @media screen and (min-width: 1200px) {
+        font-size: 26px;
+        font-weight: 700;
+        line-height: 1.19;
     }
 }
 
@@ -35,13 +34,22 @@
     font-family: Raleway;
     color: var(--accent-color);
     font-family: Raleway;
-    font-size: 26px;
+    font-size: 24px;
     font-weight: 700;
-    line-height: 1.19;
+    line-height: 1.16;
+    @media screen and (min-width: 1200px) {
+            font-size: 26px;
+            font-weight: 700;
+            line-height: 1.19;
+        }
 }
 /* Site,contact-nav */
 .navigation {
-    @extend %flex-align
+    display: none;
+    @media screen and (min-width: 768px) {
+        display: flex;
+        align-items: center;
+    }
 }
 .navigation__item:not(last-child) {
     margin-right: 49px;
@@ -100,9 +108,23 @@
 //     // }
 // }
 .contacts {
-    display: flex;
-    margin-left: auto;
-    align-items: center;
+    
+    display: none;
+    @media screen and (min-width: 768px){
+        display: flex;
+        flex-direction: column;
+        margin-left: auto;
+        // display: flex;
+        // margin-left: auto;
+        // align-items: center;
+    }
+         @media screen and (min-width: 1200px) {
+                display: flex;
+                margin-left: auto;
+                align-items: center;
+                flex-direction: row;
+            }
+   
 }
 // .contacts__item:not(:last-child) {
 //     margin-top: 50px;
@@ -110,12 +132,13 @@
 
 .contacts__link {
     display: flex;
-    padding-top: 32px;
-    padding-bottom: 32px;
+    // padding-top: 32px;
+    // padding-bottom: 32px;
 
     color: var(--secondary-text-color);
     font-weight: 500;
-    line-height: 1.14;
+    font-size: 12px;
+    line-height: 1.16;
     letter-spacing: 0.02em;
     text-decoration: none;
     transition: color 250ms, cubic-bezier(0.4, 0, 0.2, 1);
@@ -123,10 +146,21 @@
     &focus {
     color: var(--accent-color);
     }
+        @media screen and (min-width: 1200px) {
+            font-size: 14px;
+            line-height: 1.14;
+            padding-top: 32px;
+            padding-bottom: 32px;
+        }
     
 }
 .contacts__item:not(:last-child) {
-    margin-right: 50px;
+    @media screen and (max-width: 1199px) {
+        margin-bottom: 10px;
+    }
+        @media screen and (min-width: 1200px) {
+            margin-right: 50px;
+        }
 }
 .contacts__icon {
     fill: currentColor;
