--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -17,11 +17,11 @@
     letter-spacing: 0.06em;
     margin-bottom: 30px;
 }
-.section-title {
-    color: var(--title-text-color);
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.16;
-    text-align: center;
-    margin-bottom: 50px;
-}
+// .section-title {
+//     color: var(--title-text-color);
+//     font-weight: 700;
+//     font-size: 36px;
+//     line-height: 1.16;
+//     text-align: center;
+//     margin-bottom: 50px;
+// }
