--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -5,6 +5,7 @@
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.2);
+    opacity: 1;
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms;
 }
 
@@ -35,7 +36,7 @@
     position: absolute;
     @extend %flex-center;
     top: 8px;
-    left: 490px;
+    right: 8px;
     width: 30px;
     height: 30px;
     background-color: var(--primary-text-color);
