--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -2,23 +2,62 @@
 
 .team {
     background-color: var(--background-color);
+    padding-bottom: 60px;
+    padding-top: 60px;
+    @media screen and (min-width: 1200px) {
     padding-bottom: 94px;
     padding-top: 94px;
+    }
 }
 .team-list {
-    @extend %flex-wrap;
+    @media screen and (min-width: 768px) {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 30px;
+        align-items: center;
+        justify-content: center;
+    
+    }
+}
+.team-list:not(:last-child) {
+    @media screen and (max-width: 480px) {
+        margin-bottom: 30px;
+    }
 }
 .team-list__item {
-    flex-basis: calc((100% - 90px) / 4);
     background-color: 0px 4px 4px hex;
+    @media screen and (min-width: 1199px) {
+            flex-basis: calc((100% - 60px) / 2);
+        }
+    @media screen and (min-width: 1199px){
+    flex-basis: calc((100% - 90px) / 4);
+    }
+}
+.team-list__photo {
+    @media screen and (max-width: 767px) {
+        margin-right: auto;
+        margin-left: auto;
+        
+    }
 }
 .team-list__section {
-    padding-top: 30px;
-    padding-bottom: 30px;
-    background-color: #ffffff;
-    border-bottom-left-radius: 4%;
-    border-bottom-right-radius: 4%;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+        background-color: #ffffff;
+        border-bottom-left-radius: 4%;
+        border-bottom-right-radius: 4%;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    @media screen and (max-width: 1199px) {
+        padding-top: 30px;
+        padding-bottom: 24px;   
+    }
+    @media screen and (min-width: 1200px) {
+        padding-top: 30px;
+        padding-bottom: 30px;
+    }
+}
+.team-list__item:not(:last-child) {
+    @media screen and (max-width: 767px) {
+        margin-bottom: 30px;
+    }
 }
 .team-list__title {
     color: var(--title-text-color);
@@ -39,14 +78,15 @@
 .team-list__icon {
     display: flex;
     flex-wrap: wrap;
-    align-items: baseline;
+    align-items: center;
+    justify-content: center;
     gap: 10px;
     margin-right: 32px;
     margin-left: 32px;
 }
-.team-list__img {
-    flex-basis: calc((100% - 30px) / 4);
-}
+// .team-list__img {
+//     flex-basis: calc((100% - 30px) / 4);
+// }
 .team-list__link {
     display: flex;
     justify-content: center;
